--- a/ansible/roles/kubernetes-apps/templates/wordpress/mysql.yaml.j2
+++ b/ansible/roles/kubernetes-apps/templates/wordpress/mysql.yaml.j2
@@ -5,12 +5,13 @@ metadata:
   namespace: default
   labels:
     app: wordpress
+    tier: database
 spec:
   ports:
     - port: 3306
   selector:
     app: wordpress
-    tier: mysql
+    tier: database
   clusterIP: None
 
 ---
@@ -22,18 +23,19 @@ metadata:
   namespace: default
   labels:
     app: wordpress
+    tier: database
 spec:
   selector:
     matchLabels:
       app: wordpress
-      tier: mysql
+      tier: database
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: wordpress
-        tier: mysql
+        tier: database
     spec:
       containers:
       - image: mysql:5.6
@@ -64,4 +66,4 @@ spec:
       selector:
         matchLabels:
           app: wordpress
-          tier: mysql
+          tier: database
