--- a/ansible/roles/kubernetes-apps/templates/wordpress/frontend.yaml.j2
+++ b/ansible/roles/kubernetes-apps/templates/wordpress/frontend.yaml.j2
@@ -34,8 +34,14 @@ spec:
         - containerPort: 80
           name: wordpress
         volumeMounts:
+        - name: tz-config
+          mountPath: /etc/localtime
         - name: wordpress-pv-claim
           mountPath: /var/www/html
+      volumes:
+      - name: tz-config
+        hostPath:
+          path: /etc/localtime
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
