Reorg apps and storage

--- a/apps/home/nodered/prepare/flows.json.j2
+++ b/apps/home/nodered/prepare/flows.json.j2
@@ -64,7 +64,7 @@
         "server": "3925f1ad.f3636e",
         "service_domain": "persistent_notification",
         "service": "create",
-        "data": "{\"title\":\"Test from NodeRED !\",\"message\":\"The sun is : {{ payload }}\"}",
+        "data": "{\"title\":\"Test from NodeRED !\",\"message\":\"The sun is : {{ '{{' }} payload {{ '}}' }}\"}",
         "render_data": true,
         "mergecontext": "",
         "output_location": "payload",
