--- a/apps/home/homeassistant/prepare/secrets.yaml.j2
+++ b/apps/home/homeassistant/prepare/secrets.yaml.j2
@@ -1,6 +1,10 @@
 
 # Use this file to store secrets like usernames and passwords.
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
-some_password: welcome
+
 
 recorder_mysql_url: mysql://{{ homeassistant_mysql_user }}:{{ homeassistant_mysql_password }}@homeassistant-mysql/{{ homeassistant_mysql_database }}?charset=utf8
+
+# MQTT credentials
+mqtt_username: user
+mqtt_password: Passw0rd
