--- a/ansible/roles/nginx/templates/sites.j2
+++ b/ansible/roles/nginx/templates/sites.j2
@@ -45,7 +45,7 @@ server {
 		alias {{ location.alias }};
 			{% endif %}
 			{% if location.proxy_pass is defined %}
-		include proxy_params;
+		include custom_proxy_params;
 		proxy_pass {{ location.proxy_pass }};
 			{% endif %}
 			{% if location.proxy_enable_websocket is defined and location.proxy_enable_websocket %}
@@ -136,7 +136,7 @@ server {
 		alias {{ location.alias }};
 			{% endif %}
 			{% if location.proxy_pass is defined %}
-		include proxy_params;
+		include custom_proxy_params;
 		proxy_pass {{ location.proxy_pass }};
 			{% endif %}
 			{% if location.proxy_enable_websocket is defined and location.proxy_enable_websocket %}
