Rename local storage class

--- a/ansible/roles/kubernetes-infra/templates/kubernetes/storage/storage-class.yaml.j2
+++ b/ansible/roles/kubernetes-infra/templates/kubernetes/storage/storage-class.yaml.j2
@@ -1,6 +1,6 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: local-storage
+  name: {{ kubernetes_local_lvm_storage_class_name }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
