--- a/apps/home/homeassistant/deploy/frontend.yaml.j2
+++ b/apps/home/homeassistant/deploy/frontend.yaml.j2
@@ -41,7 +41,7 @@ spec:
       name: homeassistant-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 1G
