--- a/apps/home/homeassistant/deploy/mysql.yaml.j2
+++ b/apps/home/homeassistant/deploy/mysql.yaml.j2
@@ -74,7 +74,7 @@ spec:
       name: homeassistant-mysql-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 2G
