--- a/apps/stream/airsonic/deploy/frontend.yaml.j2
+++ b/apps/stream/airsonic/deploy/frontend.yaml.j2
@@ -54,7 +54,7 @@ spec:
       name: airsonic-data-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 256M
@@ -67,7 +67,7 @@ spec:
       name: airsonic-playlists-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 256M
@@ -80,7 +80,7 @@ spec:
 #      name: airsonic-podcasts-pv-claim
 #    spec:
 #      accessModes: [ "ReadWriteOnce" ]
-#      storageClassName: local-storage
+#      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
 #      resources:
 #        requests:
 #          storage: 1G
