--- a/apps/test/wordpress/deploy/frontend.yaml.j2
+++ b/apps/test/wordpress/deploy/frontend.yaml.j2
@@ -49,7 +49,7 @@ spec:
       name: wordpress-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 1G
