--- a/apps/test/wordpress/deploy/mysql.yaml.j2
+++ b/apps/test/wordpress/deploy/mysql.yaml.j2
@@ -65,7 +65,7 @@ spec:
       name: wordpress-mysql-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 2G
