--- a/apps/web/ttrss/deploy/pgsql.yaml.j2
+++ b/apps/web/ttrss/deploy/pgsql.yaml.j2
@@ -69,7 +69,7 @@ spec:
       name: ttrss-pgsql-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-storage
+      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
       resources:
         requests:
           storage: 1G
