Remove test applications

--- a/apps/web/ttrss/deploy/frontend.yaml.j2
+++ b/apps/web/ttrss/deploy/frontend.yaml.j2
@@ -68,9 +68,9 @@ spec:
         name: ttrss
 # TODO inject TT-RSS configuration after the image is updated
 #        env:
-#        - name: WORDPRESS_DB_HOST
+#        - name: TTRSS_DB_HOST
 #          value: ttrss-mysql
-#        - name: WORDPRESS_DB_PASSWORD
+#        - name: TTRSS_DB_PASSWORD
 #          valueFrom:
 #            secretKeyRef:
 #              name: ttrss-mysql-pass
