--- a/ansible/roles/kubernetes-master/templates/kubeadm_config.yaml.j2
+++ b/ansible/roles/kubernetes-master/templates/kubeadm_config.yaml.j2
@@ -4,6 +4,15 @@ clusterName: {{ kubernetes_cluster_name }}
 networking:
   podSubnet: {{ kubernetes_pod_network_cidr }}
 
+# To allow Prometheus to gather metrics from kube controllerManager and scheduler, 
+# we need to bind on 0.0.0.0 and not the dedault 127.0.0.1
+controllerManager:
+  extraArgs:
+    address: 0.0.0.0
+scheduler:
+  extraArgs:
+    address: 0.0.0.0
+
 ---
 
 apiVersion: kubeadm.k8s.io/v1beta1
