Add elastic-search-exporter Grafana dashboard

--- a/apps/monitoring/grafana/deploy/statefulset.yaml.j2
+++ b/apps/monitoring/grafana/deploy/statefulset.yaml.j2
@@ -47,6 +47,9 @@ spec:
         - mountPath: /etc/grafana/provisioning/dashboards
           name: grafana-dashboards
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/elastic-search-exporter
+          name: grafana-dashboard-elastic-search-exporter
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/k8s-cluster-rsrc-use
           name: grafana-dashboard-k8s-cluster-rsrc-use
           readOnly: false
@@ -87,6 +90,9 @@ spec:
       - configMap:
           name: grafana-dashboards
         name: grafana-dashboards
+      - configMap:
+          name: grafana-dashboard-elastic-search-exporter
+        name: grafana-dashboard-elastic-search-exporter
       - configMap:
           name: grafana-dashboard-k8s-cluster-rsrc-use
         name: grafana-dashboard-k8s-cluster-rsrc-use
