Fix elasticsearch service and URL

--- a/apps/logging/elasticsearch/deploy/ingress.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/ingress.yaml.j2
@@ -12,5 +12,5 @@ spec:
       paths:
         - path: /elasticsearch
           backend:
-            serviceName: elastic
+            serviceName: elasticsearch
             servicePort: 9200
