Add ReloaderEnable restarting applications when their configurations are updated

--- a/apps/logging/fluentd/deploy/deployment.yaml.j2
+++ b/apps/logging/fluentd/deploy/deployment.yaml.j2
@@ -5,6 +5,8 @@ metadata:
   namespace: logging
   labels:
     app: fluentd
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
