--- a/apps/web/ttrss/deploy/ttrs-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrs-deployment.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: ttrss
     tier: frontend
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
