--- a/apps/monitoring/grafana/deploy/statefulset.yaml.j2
+++ b/apps/monitoring/grafana/deploy/statefulset.yaml.j2
@@ -5,6 +5,8 @@ metadata:
     app: grafana
   name: grafana
   namespace: monitoring
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
