--- a/apps/infra/dashboard/deploy/dashboard.yaml.j2
+++ b/apps/infra/dashboard/deploy/dashboard.yaml.j2
@@ -12,25 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# ------------------- Dashboard Secret ------------------- #
-
-apiVersion: v1
-kind: Secret
-metadata:
-  labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-certs
-  namespace: kube-system
-type: Opaque
-
----
 # ------------------- Dashboard Service Account ------------------- #
 
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
+    app: kubernetes-dashboard
+    app-component: kubernetes-dashboard
   name: kubernetes-dashboard
   namespace: kube-system
 
@@ -54,7 +43,7 @@ rules:
   # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
 - apiGroups: [""]
   resources: ["secrets"]
-  resourceNames: ["kubernetes-dashboard-key-holder", "kubernetes-dashboard-certs"]
+  resourceNames: ["kubernetes-dashboard-key-holder"]
   verbs: ["get", "update", "delete"]
   # Allow Dashboard to get and update 'kubernetes-dashboard-settings' config map.
 - apiGroups: [""]
@@ -93,7 +82,8 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
+    app: kubernetes-dashboard
+    app-component: kubernetes-dashboard
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
@@ -101,43 +91,44 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: kubernetes-dashboard
+      app: kubernetes-dashboard
+      app-component: kubernetes-dashboard
   template:
     metadata:
       labels:
-        k8s-app: kubernetes-dashboard
+        app: kubernetes-dashboard
+        app-component: kubernetes-dashboard
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.0
+        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.1
         ports:
-        - containerPort: {{ kubernetes_dashboard_container_port }}
+        - containerPort: 9090
           protocol: TCP
         args:
-{% for arg in kubernetes_dashboard_container_args %}
-          - {{ arg }}
-{% endfor %}
+          - --enable-insecure-login
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
           # - --apiserver-host=http://my-address:port
+        resources:
+          requests:
+            cpu: "{{ kubernetes_dashboard_requests_cpu | default("50m") }}"
+            memory: "{{ kubernetes_dashboard_requests_memory | default("128Mi") }}"
+          limits:
+            cpu: "{{ kubernetes_dashboard_limits_cpu | default("100m") }}"
+            memory: "{{ kubernetes_dashboard_limits_memory | default("256Mi") }}"
         volumeMounts:
-        - name: kubernetes-dashboard-certs
-          mountPath: /certs
           # Create on-disk volume to store exec logs
         - mountPath: /tmp
           name: tmp-volume
         livenessProbe:
           httpGet:
-            scheme: {{ kubernetes_dashboard_service_proto }}
             path: /
-            port: {{ kubernetes_dashboard_container_port }}
+            port: 9090
           initialDelaySeconds: 30
           timeoutSeconds: 30
       volumes:
-      - name: kubernetes-dashboard-certs
-        secret:
-          secretName: kubernetes-dashboard-certs
       - name: tmp-volume
         emptyDir: {}
       serviceAccountName: kubernetes-dashboard
@@ -153,12 +144,14 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
+    app: kubernetes-dashboard
+    app-component: kubernetes-dashboard
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
   ports:
-    - port: {{ kubernetes_dashboard_service_port }}
-      targetPort: {{ kubernetes_dashboard_container_port }}
+  - port: 80
+    targetPort: 9090
   selector:
-    k8s-app: kubernetes-dashboard
+    app: kubernetes-dashboard
+    app-component: kubernetes-dashboard
