--- a/apps/home/homeassistant/deploy/mysql-secret.yaml.j2
+++ b/apps/home/homeassistant/deploy/mysql-secret.yaml.j2
@@ -3,6 +3,9 @@ kind: Secret
 metadata:
   name: homeassistant-mysql-pass
   namespace: default
+  labels:
+    app: homeassistant
+    app-component: mysql
 type: Opaque
 data:
   password: {{ homeassistant_mysql_password | b64encode }}
