--- a/apps/home/homeassistant/deploy/mysql-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/mysql-statefulSet.yaml.j2
@@ -5,22 +5,22 @@ metadata:
   namespace: default
   labels:
     app: homeassistant
-    tier: database
+    app-component: mysql
 spec:
   selector:
     matchLabels:
       app: homeassistant
-      tier: database
+      app-component: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: homeassistant
-        tier: database
+        app-component: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: mysql:5.6.43
         name: mysql
         env:
         - name: MYSQL_DATABASE
@@ -45,6 +45,13 @@ spec:
           mountPath: /etc/localtime
         - name: homeassistant-mysql-pv-claim
           mountPath: /var/lib/mysql
+        resources:
+          requests:
+            cpu: "{{ homeassistant_mysql_requests_cpu | default("500m") }}"
+            memory: "{{ homeassistant_mysql_requests_memory | default("512Mi") }}"
+          limits:
+            cpu: "{{ homeassistant_mysql_limits_cpu | default("1000m") }}"
+            memory: "{{ homeassistant_mysql_limits_memory | default("512Mi") }}"
       volumes:
       - name: tz-config
         hostPath:
@@ -63,4 +70,4 @@ spec:
       selector:
         matchLabels:
           app: homeassistant
-          tier: database
+          app-component: mysql
