--- a/apps/home/roomassistant/deploy/deployment.yaml.j2
+++ b/apps/home/roomassistant/deploy/deployment.yaml.j2
@@ -5,23 +5,23 @@ metadata:
   namespace: default
   labels:
     app: roomassistant
-    tier: backend
+    app-component: roomassistant
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: roomassistant
-      tier: backend
+      app-component: roomassistant
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: roomassistant
-        tier: backend
+        app-component: roomassistant
     spec:
       containers:
-      - image: mkerix/room-assistant
+      - image: mkerix/room-assistant:1.1.1
         name: roomassistant
 {% if roomassistant_environment_variables | default({}) | length > 0 %}
         env:
@@ -30,6 +30,13 @@ spec:
           value: "{{ env_var.value }}"
 {% endfor %}
 {% endif %}
+        resources:
+          requests:
+            cpu: "{{ roomassistant_requests_cpu | default("100m") }}"
+            memory: "{{ roomassistant_requests_memory | default("256Mi") }}"
+          limits:
+            cpu: "{{ roomassistant_limits_cpu | default("250m") }}"
+            memory: "{{ roomassistant_limits_memory | default("256Mi") }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
