--- a/apps/logging/fluent-bit/deploy/configMap.yaml.j2
+++ b/apps/logging/fluent-bit/deploy/configMap.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: fluent-bit-config
   namespace: logging
   labels:
-    k8s-app: fluent-bit
+    app: fluent-bit
+    app-component: fluent-bit
 data:
   # Configuration files: server, input, filters and output
   # ======================================================
