--- a/apps/logging/kibana/deploy/ingress.yaml.j2
+++ b/apps/logging/kibana/deploy/ingress.yaml.j2
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: kibana
   namespace: logging
+  labels:
+    app: kibana
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/"
 spec:
