Move HomeAssistant Mysql to Node1 to free memory on NodeHome

--- a/apps/home/homeassistant/deploy/mysql-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/mysql-statefulSet.yaml.j2
@@ -57,7 +57,7 @@ spec:
         hostPath:
           path: /etc/localtime
       nodeSelector:
-        capability/home: 'yes'
+        capability/general-purpose: 'yes'
   volumeClaimTemplates:
   - metadata:
       name: homeassistant-mysql-pv-claim
